tests/strings/wrapstrings.h

// splicer begin C_declarations
// splicer end C_declarations

void STR_pass_char(char status);
char STR_return_char();
void STR_return_char_bufferify(char * SHF_rv, int NSHF_rv);
void STR_pass_char_ptr(char * dest, const char * src);
void STR_pass_char_ptr_bufferify(char * dest, int Ndest,
    const char * src, int Lsrc);
void STR_pass_char_ptr_in_out(char * s);
void STR_pass_char_ptr_in_out_bufferify(char * s, int Ls, int Ns);
const char * STR_get_char_ptr1();
void STR_get_char_ptr1_bufferify(STR_SHROUD_array *DSHF_rv);
const char * STR_get_char_ptr2();
void STR_get_char_ptr2_bufferify(char * SHF_rv, int NSHF_rv);
const char * STR_get_char_ptr3();
void STR_get_char_ptr3_bufferify(char * output, int Noutput);
void STR_get_const_string_result_bufferify(STR_SHROUD_array *DSHF_rv);
void STR_get_const_string_len_bufferify(char * SHF_rv, int NSHF_rv);
void STR_get_const_string_as_arg_bufferify(char * output, int Noutput);
void STR_get_const_string_alloc_bufferify(STR_SHROUD_array *DSHF_rv);
const char * STR_get_const_string_ref_pure();
void STR_get_const_string_ref_pure_bufferify(STR_SHROUD_array *DSHF_rv);
const char * STR_get_const_string_ref_len();
void STR_get_const_string_ref_len_bufferify(char * SHF_rv, int NSHF_rv);
const char * STR_get_const_string_ref_as_arg();
void STR_get_const_string_ref_as_arg_bufferify(char * output,
    int Noutput);
const char * STR_get_const_string_ref_len_empty();
void STR_get_const_string_ref_len_empty_bufferify(char * SHF_rv,
    int NSHF_rv);
const char * STR_get_const_string_ref_alloc();